[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/questie/editor/quest_editor/workspace/quest_designer/blocks/base_block.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/questie/editor/icons/ying-yang_x32.png" type="Texture" id=3]
[ext_resource path="res://addons/questie/editor/quest_editor/workspace/quest_designer/blocks/constraints/has_alignment.gd" type="Script" id=4]

[node name="has_alignment" instance=ExtResource( 1 )]
title = "Character Has Alignment?"
slot/0/left_enabled = false
slot/0/left_type = 1
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 1
slot/0/right_color = Color( 0.94902, 0.247059, 0.156863, 1 )
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="." index="0"]
margin_left = 16.0
margin_top = 24.0
margin_right = 271.0
margin_bottom = 76.0
size_flags_vertical = 3

[node name="CharactersButton" type="OptionButton" parent="HBoxContainer" index="0"]
margin_top = 16.0
margin_right = 111.0
margin_bottom = 36.0
size_flags_vertical = 4
text = "Several Code"
items = [ "Several Code", null, false, 0, null, "Blacksmith", null, false, 1, null, "Magician", null, false, 2, null, "Wolf", null, false, 3, null ]
selected = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer" index="1"]
margin_left = 115.0
margin_top = 10.0
margin_right = 147.0
margin_bottom = 42.0
size_flags_vertical = 4
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" index="2"]
margin_left = 151.0
margin_right = 255.0
margin_bottom = 52.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer" index="0"]
margin_right = 104.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer" index="0"]
margin_top = 5.0
margin_right = 24.0
margin_bottom = 19.0
text = "Min"

[node name="MinAlignment" type="SpinBox" parent="HBoxContainer/VBoxContainer/HBoxContainer" index="1"]
margin_left = 28.0
margin_right = 102.0
margin_bottom = 24.0
size_flags_vertical = 4
min_value = -10000.0
max_value = 10000.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer" index="1"]
margin_top = 28.0
margin_right = 104.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2" index="0"]
margin_top = 5.0
margin_right = 26.0
margin_bottom = 19.0
size_flags_horizontal = 0
text = "Max"

[node name="MaxAlignment" type="SpinBox" parent="HBoxContainer/VBoxContainer/HBoxContainer2" index="1"]
margin_left = 30.0
margin_right = 104.0
margin_bottom = 24.0
size_flags_horizontal = 5
size_flags_vertical = 4
min_value = -10000.0
max_value = 10000.0
rounded = true
